Hopefully fixed the CI.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,9 @@ before_script:
   - pip install conan
 
 geebee:
-  - mkdir build
-  - cd build
-  - conan install ..
-  - cmake ..
-  - make
+  script:
+    - mkdir build
+    - cd build
+    - conan install ..
+    - cmake ..
+    - make
