Upgrading conan as well for CI.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 before_script:
   - sudo pip2.7 install --upgrade pip
-  - sudo pip2.7 install conan
+  - sudo pip2.7 install --upgrade conan
 
 geebee:
   script:
