--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,11 @@
 before_script:
   - sudo pip2.7 install --upgrade pip
   - sudo pip2.7 install --upgrade conan
+  - rm -rf ~/.conan
 
 geebee:
   script:
+    - rm -rf build
     - mkdir build
     - cd build
     - conan install ..
